# exercises

./: .gitignore  README.md
competitive-programming/: atcoder-dp_f.cpp  cses-1158.cpp  cses-1638.cpp  cses-1639.cpp  cses-1668.cpp  cses-1672.cpp  cses-1675.cpp  spoj-rmqsq.cpp  uva-10026.cpp  uva-10107.cpp  uva-11239.cpp  uva-1203.cpp  uva-12100.cpp  uva-12210.cpp
competitive-programming/uva-907/: d&c.cpp  dp.cpp
data-science/: pyproject.toml
data-science/calc-num/: jacobi_and_seidel.ipynb  lu_factorization.ipynb  lu_factorization_and_gauss.ipynb
data-science/knn/: load-breast-cancer.ipynb
games/keyboard-input/: README.md  main.c
kubernetes/course-udemy-beginners/: README.md
kubernetes/course-udemy-beginners/deployments/: deployment.yaml
kubernetes/course-udemy-beginners/replicasets/: replicaset.yaml
media/: pyproject.toml
media/image-processing/: fundamentals.ipynb  histogram_equalization.ipynb  pixelwise_operators.ipynb
media/photo-filter/: Makefile
media/photo-filter/src/: main.c
media/photo-filter/src/bmp-manager/: core.c  read.c
media/photo-filter/src/bmp-manager/include/: api.h  internal.h
operating-systems/boot-sector/: README.md  hello.asm
