[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["Lucas Ferreira de Almeida <lucasf.almeida.dev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
numpy = "^1.24.2"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
