[tool.poetry]
name = "media"
version = "0.1.0"
description = ""
authors = ["Lucas Ferreira de Almeida <lucasf.almeida.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
imageio = "^2.26.1"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
